Bug 442861 - the icon of foreground/background color will not refresh
Summary: the icon of foreground/background color will not refresh
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-23 20:14 UTC by thetwo
Modified: 2021-11-04 03:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2021-09-23 20:14:35 UTC
STEPS TO REPRODUCE
1. create a fill layer
2. Switched from fill layer to paint layer and found that the icon did not change in real time 
3. Pick a color from the color picker, the icon changes 
4.Switched from paint layer to fill layer and found that the icon did not change in real time 

EXPECTED RESULT
The icon should change in real time like the color picker
Comment 1 wolthera 2021-09-26 13:51:06 UTC
Halla, can you describe how you reproduced the bug? I am somewhat lost?
Comment 2 Lynx3d 2021-11-04 03:51:47 UTC
Git commit ceef91f1a2d1731c1ed263be8c4d0d0cc9f78ae4 by Mathias Wein.
Committed on 04/11/2021 at 03:48.
Pushed by mwein into branch 'master'.

Fix update issues of KoDualColorButton

It didn't react to display configuration changes until something else
triggered a repaint.
Also, it turned out it never disconnected from signals, which caused
it to switch to "dumb" renderer (no color management) when closing
one of multiple documents.
(cherry picked from commit e610fb648813ef5ebe0c71f5e08fbd0d09a4fd9d)

M  +6    -1    libs/ui/widgets/KoDualColorButton.cpp

https://invent.kde.org/graphics/krita/commit/ceef91f1a2d1731c1ed263be8c4d0d0cc9f78ae4
Comment 3 Lynx3d 2021-11-04 03:51:56 UTC
Git commit e610fb648813ef5ebe0c71f5e08fbd0d09a4fd9d by Mathias Wein.
Committed on 04/11/2021 at 03:46.
Pushed by mwein into branch 'krita/5.0'.

Fix update issues of KoDualColorButton

It didn't react to display configuration changes until something else
triggered a repaint.
Also, it turned out it never disconnected from signals, which caused
it to switch to "dumb" renderer (no color management) when closing
one of multiple documents.

M  +6    -1    libs/ui/widgets/KoDualColorButton.cpp

https://invent.kde.org/graphics/krita/commit/e610fb648813ef5ebe0c71f5e08fbd0d09a4fd9d