Fix update issues of KoDualColorButton

It didn't react to display configuration changes until something else
triggered a repaint.
Also, it turned out it never disconnected from signals, which caused
it to switch to "dumb" renderer (no color management) when closing
one of multiple documents.

BUG:442861